    with XTerm on Mac OS X.

  * More portable and robust window-size change detection.

  * More parsimonious status-bar updates.

  * StatusBar, FastGUI, VerboseMacros, and RequestOrder are not buffer specific, are
    only saved in ~/.ne/.default#ap.

  * Current syntax name is buffer specific; only saved in autoprefs, not ~/.ne/.default#ap.

---- Bug fixes ----

  * Fixed old, bad, shameful bug: complex assertions were compiled into
    the code even for the non-debug version. As a result, ne was deadly
    slow on large files.

  * Fixed small mistakes in the keyboard sequences displayed in the menus,
    and small discrepancies between default.keys/default.menus and reality
    (thanks to John Gabriele for having pointed out this).

  * In some cases after a keyboard timeout an ESC character was left in
    the keyboard buffer, causing weird behaviours.

  * Probably really (this time) fixed problems with regexps matching empty strings.

Changes from version 2.0.2

---- Bug fixes ----

  * Still better file handling for the THROUGH command.

  * Visual glitches appearing on Cygwin have been fixed.

Changes from version 2.0.1

---- Bug fixes ----

  * The file names for the THROUGH command were being generated
    correctly, but in the current directory instead of P_tmpdir.

  * The built-in ANSI escape sequences had a glitch that could cause
    some visual inconsistencies.

Changes from version 2.0

---- Bug fixes ----

  * The file names for the THROUGH command were being generated
    incorrectly.

Changes from version 1.43

---- Improvements ----

  * We got syntax highlighting! Thanks to Daniele Filaretti, whose undergrad
    thesis was about porting joe's syntax highlighting system to ne.

  * Billions of small improvements and cleanups.

Changes from version 1.42

---- Bug fixes ----

  * Finally fixed the BSD exit problem (ESC would kill ne on BSD and
    derivated operating systems). The problem lay in a slight difference