@@ -36,6 +36,7 @@ ne.pdf: ne.dvi
 	dvipdf ne.dvi
 
 html/index.html: ne.texinfo version.texinfo
+	-rm -fr html
 	makeinfo --html -o html ne.texinfo
 	for i in html/*html; do sed -i -e "s/\`/'/g" $$i; done
 	for i in html/*html; do sed -i -e "s/'ne'/ne/g" $$i; done
