@@ -1,116 +1,0 @@
-#
-# This is the makefile for ne on the Amiga on SAS/C.
-#
-
-GLOBALDIR     = ENV:ne
-
-PROGRAM       = ne
-
-CC	      = sc
-
-LD	      = slink
-
-LIBS	      = lib:aterminfonbr.lib lib:scnb.lib lib:scmnb.lib
-
-OBJS	      = actions.o \
-		buffer.o \
-		clips.o \
-		cm.o \
-		command.o \
-		display.o \
-		edit.o \
-		errors.o \
-		exec.o \
-		hash.o \
-		help.o \
-		input.o \
-		inputclass.o \
-		keys.o \
-		menu.o \
-		names.o \
-		navigation.o \
-		ne.o \
-		prefs.o \
-		regex.o \
-		request.o \
-		search.o \
-		signals.o \
-		streams.o \
-		support.o \
-		term.o \
-		undo.o
-
-
-
-fast:
-	smake ne "LFLAGS=ND" "CFLAGS=OPTIMIZE DEFINE NDEBUG=1 PARMS=REG DEFINE __USE_SYSBASE=1 NOSTACKCHECK DATA=FAR ANSI NOVERSION"
-
-std:
-	smake ne "LFLAGS=ND" "CFLAGS=DEFINE NDEBUG=1 PARMS=REG DEFINE __USE_SYSBASE=1 NOSTACKCHECK DATA=FAR ANSI NOVERSION"
-
-debug:
-	smake ne "LFLAGS=ADDSYM" "CFLAGS=DEBUG LINE PARMS=REG DEFINE __USE_SYSBASE=1 NOSTACKCHECK DATA=FAR ANSI NOVERSION"
-
-superdebug:
-	smake ne "LFLAGS=ADDSYM" "CFLAGS=DEBUG LINE DEFINE DEBUG=1 PARMS=REG DEFINE __USE_SYSBASE=1 NOSTACKCHECK DATA=FAR ANSI NOVERSION"
-
-
-
-ne:	$(OBJS) $(LIBS)
-	$(LD) lib:c.o $(OBJS) TO ne LIB $(LIBS) $(LDFLAGS)
-
-
-###
-
-ne.h: enums.h
-
-actions.o: ne.h	keycodes.h names.h errors.h protos.h version.h
-
-buffer.o: ne.h keycodes.h names.h errors.h protos.h
-
-clips.o: ne.h keycodes.h names.h errors.h protos.h
-
-cm.o: cm.h
-
-command.o: ne.h keycodes.h names.h errors.h protos.h help.h hash.h
-
-display.o: ne.h keycodes.h names.h errors.h protos.h termchar.h
-
-edit.o: ne.h keycodes.h names.h errors.h protos.h
-
-errors.o: errors.h
-
-exec.o: ne.h keycodes.h names.h errors.h protos.h
-
-hash.o: hash.h
-
-input.o: ne.h keycodes.h names.h errors.h protos.h
-
-inputclass.o: ne.h keycodes.h names.h errors.h protos.h
-
-keys.o: ne.h keycodes.h names.h errors.h protos.h
-
-menu.o: ne.h keycodes.h names.h errors.h protos.h
-
-navigation.o: ne.h keycodes.h names.h errors.h protos.h
-
-ne.o: ne.h keycodes.h names.h errors.h protos.h version.h regex.h
-
-prefs.o: ne.h keycodes.h names.h errors.h protos.h
-
-regex.o: regex.h regex.c
-	$(CC) $(CFLAGS) DEFINE REGEX_MALLOC=1 $*
-
-request.o: ne.h keycodes.h names.h errors.h protos.h
-
-search.o: ne.h keycodes.h names.h errors.h protos.h regex.h
-
-signals.o: ne.h keycodes.h names.h errors.h protos.h
-
-streams.o: ne.h keycodes.h names.h errors.h protos.h
-
-support.o: ne.h keycodes.h names.h errors.h protos.h support.c
-
-term.o: termchar.h cm.h
-
-undo.o: ne.h keycodes.h names.h errors.h protos.h
