@@ -87,11 +87,7 @@ print NE_VERSION_H qq[/* This file was automatically generated by $0. */
 #define PROGRAM_NAME "ne, the nice editor"
 #define ABOUT_MSG PROGRAM_NAME " " VERSION ". " DATE
 
-#ifdef _AMIGA
-#define VERSION_STRING "\0\$VER:" PROGRAM_NAME " " VERSION ". " DATE
-#else
 #define VERSION_STRING "@(#)"ABOUT_MSG
-#endif
 
 ];
 close NE_VERSION_H;
